cpp/test/Slice/errorDetection/InterfaceMismatch.err
InterfaceMismatch.ice:12: class `Foo1' was declared as interface
InterfaceMismatch.ice:13: class `Foo1' was declared as interface
InterfaceMismatch.ice:13: parse error
InterfaceMismatch.ice:16: class `Foo2' was defined as interface
InterfaceMismatch.ice:19: interface `Foo3' was declared as class
InterfaceMismatch.ice:20: interface `Foo3' was declared as class
InterfaceMismatch.ice:20: parse error
InterfaceMismatch.ice:23: interface `Foo4' was defined as class
