cpp/test/Slice/errorDetection/InterfaceMismatch.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

interface Foo1;
class Foo1;
class Foo1 { };

interface Foo2 { };
class Foo2;

class Foo3;
interface Foo3;
interface Foo3 { };

class Foo4 { };
interface Foo4;
